# axiom

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  artemis_to_flecs.txt  gitbash.lnk  goals.txt  log.txt  logs.txt  todo.txt
assets/: Materials.xml
assets/Animations/: Bird.anim  Chest.anim  Froku - Copy.anim  Froku.anim  Froku3.anim  FrokuX.anim  Snake.anim
assets/Audio/: chickensound.m4a
assets/Models/: Barrel.pm  Wheel_1.pm  WindowC_1.pm  WindowD_1.pm  WindowE_1.pm  candycornHighPoly.pm  candycornLowPoly.pm  castical.pm  challis.pm  contraption.pm  donut.pm  frokuEXP.pm  frokuFINALxX.pm  frokuMASTER.pm  helmet.pm  love_heart.pm  pumpkinFBX.pm  shield.pm  yip.pm
assets/Models/PrincipiaModels/: Chair.pm  WindowA_1.pm  WindowB_1.pm  diamond.pm  wooden window.pm
assets/Prefabs/: ActualDoor.prefab  Arrow.prefab  Awning.prefab  AwningTop.prefab  Barrel.prefab  Battery.prefab  BatteryHolder.prefab  BatteryTab.prefab  Bird.prefab  Button.prefab  CandyCorn.prefab  Chest.prefab  Door.prefab  Door2.prefab  FallingRock.prefab  Froku.prefab  Froku3.prefab  FrokuHelmet.prefab  Heart.prefab  HeartAltar.prefab  Helmet.prefab  HelmetAltar.prefab  Hole.prefab  Nameasdfasdf.prefab  New Box!.prefab  Pumpkin.prefab  RockFallPad.prefab  ShinyBlock.prefab  Snake.prefab  Spring.prefab  Sword.prefab  UltraSwagStinct.prefab  Wall.prefab  heriarchystuff.prefab  legRight.prefab  lowerBody.prefab  pillar.prefab
assets/Scenes/: Beginning.xml  BlacMan.xml  Empty.xml  EmptyX.xml  GameSettings.xml  JabbyBird.xml  PrefabMaker.xml  Scene1.xml  Scene10.xml  Scene11.xml  Scene12.xml  Scene2.xml  Scene3.xml  Scene4.xml  Scene5.xml  Scene6.xml  Scene7.xml  Scene8.xml  Scene9.xml  TestEntrance.xml  slowbro.xml  testlvl.xml  testlvl2.xml  testlvl3.xml  testlvl4.xml  testlvl5.xml
assets/Shaders/: basic_vert.spv
assets/Shaders/glsl/: basic.frag  basic.vert  basic_compile.sh  pbr.frag  triangle_compile.sh  triangle_frag.glsl  triangle_vert.glsl
components/core/: cmp-input.h  cmp-log.h  cmp-timer.h  cmp_window.h  memory-manager.h
components/render/: cmp-camera.h  cmp-compute-raytracer.h  cmp-geometry.h  cmp-hardware-rasterizer.h  cmp-imgui.h  cmp-light.h  cmp-material.h  cmp-render.h  cmp-shader.h  cmp-texture.h  cmp-vulkan.h  cmp-window.h  texture.cpp  texture.h
components/render/vulkan/: base.hpp  buffer.hpp  initializers.hpp  vulkan-base.hpp  vulkan-buffer.hpp
components/scene/: cmp-bvh.h  cmp-camera.h  cmp-resource.h  cmp-scene.h  cmp-serialize.h  cmp-transform.h
doc/: AxiomEngineDocumentation.lnk  Doxyfile  artemis_to_flecs.txt  logs.txt  todo.txt  validationlayer.txt
doc/html/: annotated.html  classes.html  cmp-bvh_8h.html  cmp-bvh_8h_source.html  cmp-input_8h.html  cmp-input_8h_source.html  cmp-log_8h.html  cmp-log_8h_source.html  cmp-render_8h.html  cmp-render_8h_source.html  cmp-resource_8h.html  cmp-resource_8h_source.html  cmp-scene_8h.html  cmp-scene_8h_source.html  cmp-serialize_8h.html  cmp-serialize_8h_source.html  cmp-shader_8h.html  cmp-shader_8h_source.html  cmp-timer_8h.html  cmp-timer_8h_source.html  cmp-transform_8h.html  cmp-transform_8h_source.html  cmp-window_8h.html  cmp-window_8h_source.html  dir_1ba0adb0996467c509b21bba6b1aa95f.html  dir_2ab871f99c6a2b149ed6b26b19847ad0.html  dir_31e46dbc2029a00c56d50cc2146121fe.html  dir_409f97388efe006bc3438b95e9edef48.html  dir_42100eec88c69628f959138af350aadf.html  dir_8521c3544ae0359781455066316fbd9c.html  dir_8a4db3d35aff215b3f121eed4b573a08.html  dir_b639423b1b477c33570e11c69c063fee.html  dir_bae075ecefcd2f51ad6f6149ddb26d7d.html  dir_df01291edb1783a03417d7c1bb0bd90d.html  files.html  flecs-world_8cpp.html  flecs-world_8h.html  flecs-world_8h_source.html  functions.html  functions_b.html  (+275 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  (+92 more)
doc/latex/: annotated.tex  cmp-bvh_8h.tex  cmp-bvh_8h_source.tex  cmp-input_8h.tex  cmp-input_8h_source.tex  cmp-log_8h.tex  cmp-log_8h_source.tex  cmp-render_8h.tex  cmp-render_8h_source.tex  cmp-resource_8h.tex  cmp-resource_8h_source.tex  cmp-scene_8h.tex  cmp-scene_8h_source.tex  cmp-serialize_8h.tex  cmp-serialize_8h_source.tex  cmp-shader_8h.tex  cmp-shader_8h_source.tex  cmp-timer_8h.tex  cmp-timer_8h_source.tex  cmp-transform_8h.tex  cmp-transform_8h_source.tex  cmp-window_8h.tex  cmp-window_8h_source.tex  dir_1ba0adb0996467c509b21bba6b1aa95f.tex  dir_2ab871f99c6a2b149ed6b26b19847ad0.tex  dir_31e46dbc2029a00c56d50cc2146121fe.tex  dir_409f97388efe006bc3438b95e9edef48.tex  dir_42100eec88c69628f959138af350aadf.tex  dir_8521c3544ae0359781455066316fbd9c.tex  dir_8a4db3d35aff215b3f121eed4b573a08.tex  dir_b639423b1b477c33570e11c69c063fee.tex  dir_bae075ecefcd2f51ad6f6149ddb26d7d.tex  dir_df01291edb1783a03417d7c1bb0bd90d.tex  files.tex  flecs-world_8cpp.tex  flecs-world_8h.tex  flecs-world_8h_source.tex  hierarchy.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  (+135 more)
include/: cmp-transform.h  helpers.h  pch.h  sys-movement.h  sys-transform.h
lib/: log.txt
src/: main.cpp  sys-movement.cpp  sys-transform.cpp
start/: flecs-world.cpp  flecs-world.h  helpers.cpp  helpers.h  main.cpp  oldmain.cpp  pch.cpp  pch.h
systems/core/: sys-input.cpp  sys-input.h  sys-log.cpp  sys-log.h  sys-timer.cpp  sys-timer.h
systems/render/: render-base.cpp  render-base.h  renderer.h  sys-compute-raytracer.cpp  sys-compute-raytracer.h  sys-hardware-rasterizer.cpp  sys-hardware-rasterizer.h  sys-imgui-renderer.cpp  sys-imgui-renderer.h  sys-shader.cpp  sys-shader.h  sys-texture.cpp  sys-texture.h  sys-vulkan-boilerplate.cpp  sys-vulkan-boilerplate.h  sys-vulkan-resource.cpp  sys-vulkan-resource.h  sys-window.cpp  sys-window.h  texture.cpp  texture.h
systems/scene/: sys-bvh.cpp  sys-bvh.h  sys-camera.cpp  sys-camera.h  sys-resource-assimp.cpp  sys-resource-assimp.h  sys-resource-gltf.cpp  sys-resource-gltf.h  sys-resource.cpp  sys-resource.h  sys-scene.cpp  sys-scene.h  sys-serialize.cpp  sys-serialize.h  sys-transform.cpp  sys-transform.h
tests/: tests.cpp
(+8 files in other folders)
